--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+  // background-image: url(signup.jpg);
+  background-size: 100vw;
+  background-repeat: no-repeat;
+  background-position: top center;
+
+  // opacity: 0.5;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Inter", sans-serif;
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+a,
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+  color: inherit;
+}
+
+input {
+  color: inherit;
+  background-color: inherit;
+  border: none;
+  outline: none;
+}
