--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,3 +39,19 @@ input {
   border: none;
   outline: none;
 }
+
+:root {
+  --button-1: #00ff66;
+  --button-2: #db4444;
+  --button-hover-1: #a0bce0;
+  --button-hover-2: #e07575;
+
+  --text-1: #fafafa;
+  --text-2: #7d8184;
+
+  --primary-light: #fff;
+  --primary-dark: #363738;
+
+  --secondary-1: #fefaf1;
+  --secondary-2: #f5f5f5;
+}
